change float to flex for fixing layout issue

--- a/style.css
+++ b/style.css
@@ -1572,7 +1572,6 @@ li.recentcomments {
 
 .widget-area.col-sm-12.col-md-4 {
 	padding-top: 20px;
-    float: left;
 }
 
 .no-gutter .single-article {
@@ -1581,6 +1580,32 @@ li.recentcomments {
 	vertical-align: top;
 	width: 49%;
 }
+
+.entry {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.entry-content-wrapper.col-md-7 {
+    padding: 0;
+}
+
+@media (min-width: 768px) {
+
+    .entry {
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .entry-content-wrapper.col-md-7 {
+        padding: 0 15px;
+        width: 100%;
+    }
+ 
+}
+
 
 /* Icons on Widget Title */
 
